--- a/SmartLearn/vercel.json
+++ b/SmartLearn/vercel.json
@@ -1,6 +1,16 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
+    "version": 2,
+    "builds": [
+      {
+        "src": "dist/SmartLearn/**",
+        "use": "@vercel/static"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
   }
   
