--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "bootstrap": "^5.3.7",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
+    "ngx-swiper-wrapper": "^10.0.0",
     "ngx-toastr": "^19.0.0",
     "npm": "^11.5.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.4",
+    "swiper": "^11.2.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
